add spellcheck + other copy changes.

--- a/index.html
+++ b/index.html
@@ -2,116 +2,116 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+ <meta charset="utf-8">
 
-  <title>25 Headlines &middot; If you want more clicks, you have to excercise your brain</title>
-  <meta name="description" content="Write better headlines &amp; get more clicks.">
-  <meta name="author" content="Neal Shyam">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href='http://fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/styles.css">
+ <title>Write 25 headlines &middot; If you want more clicks, you have to excercise your brain.</title>
+ <meta name="description" content="Write better headlines &amp; get more clicks.">
+ <meta name="author" content="Neal Shyam">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link href='http://fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
+ <link rel="stylesheet" href="css/styles.css">
 
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+ <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+ <![endif]-->
 
-  <!-- Twitter Card data -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@nealrs">
-  <meta name="twitter:creator" content="@nealrs">
-  <meta name="twitter:title" content="25 Headlines">
-  <meta name="twitter:description" content="Write better headlines &amp; get more clicks.">
+ <!-- Twitter Card data -->
+ <meta name="twitter:card" content="summary_large_image">
+ <meta name="twitter:site" content="@nealrs">
+ <meta name="twitter:creator" content="@nealrs">
+ <meta name="twitter:title" content="25 Headlines">
+ <meta name="twitter:description" content="Write better headlines &amp; get more clicks.">
 
-  <meta name="twitter:image:src" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png">
+ <meta name="twitter:image:src" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png">
 
-  <!-- Open Graph data -->
-  <meta property="og:title" content="25 Headlines" />
-  <meta property="og:type" content="article" />
-  <meta property="og:url" content="http://nealrs.github.io/25Headlines/" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png" />
-  <meta property="og:description" content="If you want more clicks, you have to excercise your brain." />
-  <meta property="og:site_name" content="25 Headlines" />
-  <!--<meta property="fb:admins" content="Facebook numeric ID" />-->
+ <!-- Open Graph data -->
+ <meta property="og:title" content="25 Headlines" />
+ <meta property="og:type" content="article" />
+ <meta property="og:url" content="http://nealrs.github.io/25Headlines/" />
+ <meta property="og:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png" />
+ <meta property="og:description" content="If you want more clicks, you have to excercise your brain." />
+ <meta property="og:site_name" content="25 Headlines" />
+ <!--<meta property="fb:admins" content="Facebook numeric ID" />-->
 
 
 </head>
 
 <body>
-  <h1>25 <span id="contentType">Headlines</span></h1>
-  <h3 id="teaser"></h3>
+ <h2>Write 25 <span id="contentType">Headlines</span></h2>
+ <h3 id="teaser"></h3>
 
-  <!--<p style="margin-top:0; margin-bottom:0;">
-    <iframe src="http://ghbtns.com/github-btn.html?user=nealrs&repo=25Headlines&type=watch&count=true"
-    allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-related="nealrs" data-dnt="true">Tweet</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-  </p>-->
+ <!--<p style="margin-top:0; margin-bottom:0;">
+  <iframe src="http://ghbtns.com/github-btn.html?user=nealrs&repo=25Headlines&type=watch&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+  <a href="https://twitter.com/share" class="twitter-share-button" data-related="nealrs" data-dnt="true">Tweet</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+ </p>-->
 
-  <p>Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
+ <p>Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
 
-  <div id="selectors">
-    <h4>
-      <a id="selh" class="sel sela"  title="" target="_blank">Headlines</a>
-      <a id="selt" class="sel"  title="" target="_blank">Tweets</a>
-      <a id="sele" class="sel"  title="" target="_blank">Emails</a>
-  </h4>
-  </div>
-
-  <div>
-    <p>
-      <span class="length"><span id="len1" class="len leny">50</span> Eh, ok</span> &nbsp;
-      <span class="length"><span id="len2" class="len leno">62</span> Long</span> &nbsp;
-      <span class="length"><span id="len3" class="len lenr">100</span> No way</span>
-    </p>
-  </div>
-
-  <form id="form">
-    <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" required autofocus placeholder="Who Else Wants a Killer Robot?"  name="h1"/><span class="count">0</span></p>
-    <div class="line"><span class="num">2.</span><input type="text" class="hl" id="h2" required  placeholder="The Secret of Giant Pandas"  name="h2"/><span class="count">0</span></p>
-    <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" required  placeholder="Here's the Miracle That's Helping Bros Live Longer"  name="h3"/><span class="count">0</span></p>
-    <div class="line"><span class="num">4.</span><input type="text" class="hl" id="h4" required  placeholder="Little Known Ways to Nurse Your Cat"  name="h4"/><span class="count">0</span></p>
-    <div class="line"><span class="num">5.</span><input type="text" class="hl" id="h5" required  placeholder="Now You Can Have a Great Body Without Paying Too Much"  name="h5"/><span class="count">0</span></p>
-
-    <div class="line"><span class="num">6.</span><input type="text" class="hl" id="h6" required  placeholder="Annihilate Watermelons Like Gallagher"  name="h6"/><span class="count">0</span></p>
-    <div class="line"><span class="num">7.</span><input type="text" class="hl" id="h7" required  placeholder="Own the Yacht Your Neighbors Dream About"  name="h7"/><span class="count">0</span></p>
-    <div class="line"><span class="num">8.</span><input type="text" class="hl" id="h8" required  placeholder="What Everybody Ought to Know About Spiders"  name="h8"/><span class="count">0</span></p>
-    <div class="line"><span class="num">9.</span><input type="text" class="hl" id="h9" required  placeholder="100 Ways to Style Butter"  name="h9"/><span class="count">0</span></p>
-    <div class="line"><span class="num">10.</span><input type="text" class="hl" id="h10" required  placeholder="He Took the Road Less Traveled &mdash; You'll Never Guess What Happened Next"  name="h10"/><span class="count">0</span></p>
-
-    <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" required  placeholder="How to Get Rid of Stubborn Bonos"  name="h11"/><span class="count">0</span></p>
-    <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" required  placeholder="Fewer Zombies in 7 Days or Your Money Back!"  name="h12"/><span class="count">0</span></p>
-    <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" required  placeholder="Now You Can Win Hackathons Even If You Don't Know Node.js"  name="h13"/><span class="count">0</span></p>
-    <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" required  placeholder="How to Shop at Ikea Without Murdering Your Spouse"  name="h14"/><span class="count">0</span></p>
-    <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" required  placeholder="684,935 Bedbugs Agree, Your Apartment Is Infested"  name="h15"/><span class="count">0</span></p>
-
-    <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" required  placeholder="25 Reasons Why Manhattan Is Man-Has-Been"  name="h16"/><span class="count">0</span></p>
-    <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required  placeholder="Why SEO Gives marketers aneurysms"  name="h17"/><span class="count">0</span></p>
-    <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required  placeholder="The Ultimate Twerking Compilation Video"  name="h18"/><span class="count">0</span></p>
-    <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required  placeholder="The Brilliant, Super Fast Way to Shotgun a Beer"  name="h19"/><span class="count">0</span></p>
-    <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required  placeholder="Rage Spend like a Jilted Kardashian"  name="h20"/><span class="count">0</span></p>
-
-    <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required  placeholder="The future of Sharks Is Here"  name="h21"/><span class="count">0</span></p>
-    <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required  placeholder="Nebraska Just Got Exciting"  name="h22"/><span class="count">0</span></p>
-    <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required  placeholder="5 Lies Your Friends Tell You Everyday"  name="h23"/><span class="count">0</span></p>
-    <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required  placeholder="The Programming Language That RMS Actually Likes"  name="h24"/><span class="count">0</span></p>
-    <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required  placeholder="Avoid Embarrassment: Learn How to Turn down for What"  name="h25"/><span class="count">0</span></p>
-
-  <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
-  <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
-
-  <!--<input type="submit" class="feedback" value="get feedback">-->
+ <div id="selectors">
   <h4>
-    <a id="reset" class="reset">clear &amp; start over</a>
-    <a id="download" class="download">download</a>
-  </h4>
-  </form>
+   <a id="selh" class="sel sela" title="" target="_blank">Headlines</a>
+   <a id="selt" class="sel" title="" target="_blank">Tweets</a>
+   <a id="sele" class="sel" title="" target="_blank">Emails</a>
+ </h4>
+ </div>
 
-  <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a></p>
+ <div>
+  <p>
+   <span class="length"><span id="len1" class="len leny">50</span> Eh, ok</span> &nbsp;
+   <span class="length"><span id="len2" class="len leno">62</span> Long</span> &nbsp;
+   <span class="length"><span id="len3" class="len lenr">100</span> No way</span>
+  </p>
+ </div>
+
+ <form id="form">
+  <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" required autofocus placeholder="Who Else Wants a Killer Robot?" name="h1" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">2.</span><input type="text" class="hl" id="h2" required placeholder="The Secret of Giant Pandas" name="h2" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" required placeholder="Here's the Miracle That's Helping Bros Live Longer" name="h3" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">4.</span><input type="text" class="hl" id="h4"required placeholder="Little Known Ways to Nurse Your Cat" name="h4" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">5.</span><input type="text" class="hl" id="h5"required placeholder="Now You Can Have a Great Body Without Paying Too Much" name="h5" spellcheck="true"/><span class="count">0</span></p>
+
+  <div class="line"><span class="num">6.</span><input type="text" class="hl" id="h6" required placeholder="Annihilate Watermelons Like Gallagher" name="h6" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">7.</span><input type="text" class="hl" id="h7" required placeholder="Own the Yacht Your Neighbors Dream About" name="h7" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">8.</span><input type="text" class="hl" id="h8" required placeholder="What Everybody Ought to Know About Spiders" name="h8" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">9.</span><input type="text" class="hl" id="h9" required placeholder="100 Ways to Style Butter" name="h9" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">10.</span><input type="text" class="hl" id="h10" required placeholder="He Took the Road Less Traveled &mdash; You'll Never Guess What Happened Next" name="h10" spellcheck="true"/><span class="count">0</span></p>
+
+  <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" required placeholder="How to Get Rid of Stubborn Bonos" name="h11 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" required placeholder="Fewer Zombies in 7 Days or Your Money Back!" name="h12 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" required placeholder="Now You Can Win Hackathons Even If You Don't Know Node.js" name="h13 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" required placeholder="How to Shop at Ikea Without Murdering Your Spouse" name="h14 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" required placeholder="684,935 Bedbugs Agree, Your Apartment Is Infested" name="h15 " spellcheck="true"/><span class="count">0</span></p>
+
+  <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" required placeholder="25 Reasons Why Manhattan Is Man-Has-Been" name="h16 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required placeholder="Why SEO Gives marketers aneurysms" name="h17 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required placeholder="The Ultimate Twerking Compilation Video" name="h18 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required placeholder="The Brilliant, Super Fast Way to Shotgun a Beer" name="h19 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required placeholder="Rage Spend like a Jilted Kardashian" name="h20 " spellcheck="true"/><span class="count">0</span></p>
+
+  <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required placeholder="The future of Sharks Is Here" name="h21 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required placeholder="Nebraska Just Got Exciting" name="h22 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required placeholder="5 Lies Your Friends Tell You Everyday" name="h23 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required placeholder="The Programming Language That RMS Actually Likes" name="h24 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required placeholder="Avoid Embarrassment: Learn How to Turn down for What" name="h25 " spellcheck="true"/><span class="count">0</span></p>
+
+ <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
+ <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
+
+ <!--<input type="submit" class="feedback" value="get feedback">-->
+ <h4>
+  <a id="reset" class="reset">clear &amp; start over</a>
+  <a id="download" class="download">download</a>
+ </h4>
+ </form>
+
+ <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a> &middot; <a href="mailto:nealrs@gmail.com" title="I'd love to get your feedback!">feedback plz</a></p>
 
 
-  <!-- JaVAVAVAVAVascript -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-  <script src="js/script.js"></script>
+ <!-- JaVAVAVAVAVascript -->
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+ <script src="js/script.js"></script>
 </body>
 </html>
