--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 
  <p>Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
 
- <div id="selectors">
+ <div id="selectors" class="btnContainer">
   <h4>
-   <a id="selh" class="sel sela" title="" target="_blank">Headlines</a>
-   <a id="selt" class="sel" title="" target="_blank">Tweets</a>
-   <a id="sele" class="sel" title="" target="_blank">Emails</a>
+   <a id="selh" class="sel sela" title="Write headlines" target="_blank">Headlines</a>
+   <a id="selt" class="sel" title="Write tweets" target="_blank">Tweets</a>
+   <a id="sele" class="sel" title="Write email subject lines" target="_blank">Emails</a>
  </h4>
  </div>
 
  <div>
   <p>
-   <span class="length"><span id="len1" class="len leny">50</span> Eh, ok</span> &nbsp;
-   <span class="length"><span id="len2" class="len leno">62</span> Long</span> &nbsp;
-   <span class="length"><span id="len3" class="len lenr">100</span> No way</span>
+   <span class="length"><span id="len1" class="len leny" title="optimal length">50</span> Eh, ok</span> &nbsp;
+   <span class="length"><span id="len2" class="len leno" title="long, but still ok">62</span> Long</span> &nbsp;
+   <span class="length"><span id="len3" class="len lenr" title="max length allowed">100</span> No way</span>
   </p>
  </div>
 
@@ -78,32 +78,34 @@
   <div class="line"><span class="num">9.</span><input type="text" class="hl" id="h9" required placeholder="100 Ways to Style Butter" name="h9" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">10.</span><input type="text" class="hl" id="h10" required placeholder="He Took the Road Less Traveled &mdash; You'll Never Guess What Happened Next" name="h10" spellcheck="true"/><span class="count">0</span></p>
 
-  <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" required placeholder="How to Get Rid of Stubborn Bonos" name="h11 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" required placeholder="Fewer Zombies in 7 Days or Your Money Back!" name="h12 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" required placeholder="Now You Can Win Hackathons Even If You Don't Know Node.js" name="h13 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" required placeholder="How to Shop at Ikea Without Murdering Your Spouse" name="h14 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" required placeholder="684,935 Bedbugs Agree, Your Apartment Is Infested" name="h15 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" required placeholder="How to Get Rid of Stubborn Bonos" name="h11" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" required placeholder="Fewer Zombies in 7 Days or Your Money Back!" name="h12" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" required placeholder="Now You Can Win Hackathons Even If You Don't Know Node.js" name="h13" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" required placeholder="How to Shop at Ikea Without Murdering Your Spouse" name="h14" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" required placeholder="684,935 Bedbugs Agree, Your Apartment Is Infested" name="h15" spellcheck="true"/><span class="count">0</span></p>
 
-  <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" required placeholder="25 Reasons Why Manhattan Is Man-Has-Been" name="h16 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required placeholder="Why SEO Gives marketers aneurysms" name="h17 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required placeholder="The Ultimate Twerking Compilation Video" name="h18 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required placeholder="The Brilliant, Super Fast Way to Shotgun a Beer" name="h19 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required placeholder="Rage Spend like a Jilted Kardashian" name="h20 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" required placeholder="25 Reasons Why Manhattan Is Man-Has-Been" name="h16" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required placeholder="Why SEO Gives marketers aneurysms" name="h17" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required placeholder="The Ultimate Twerking Compilation Video" name="h18" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required placeholder="The Brilliant, Super Fast Way to Shotgun a Beer" name="h19" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required placeholder="Rage Spend like a Jilted Kardashian" name="h20" spellcheck="true"/><span class="count">0</span></p>
 
-  <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required placeholder="The future of Sharks Is Here" name="h21 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required placeholder="Nebraska Just Got Exciting" name="h22 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required placeholder="5 Lies Your Friends Tell You Everyday" name="h23 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required placeholder="The Programming Language That RMS Actually Likes" name="h24 " spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required placeholder="Avoid Embarrassment: Learn How to Turn down for What" name="h25 " spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required placeholder="The future of Sharks Is Here" name="h21" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required placeholder="Nebraska Just Got Exciting" name="h22" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required placeholder="5 Lies Your Friends Tell You Everyday" name="h23" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required placeholder="The Programming Language That RMS Actually Likes" name="h24" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required placeholder="Avoid Embarrassment: Learn How to Turn down for What" name="h25" spellcheck="true"/><span class="count">0</span></p>
 
  <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
  <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
 
  <!--<input type="submit" class="feedback" value="get feedback">-->
- <h4>
-  <a id="reset" class="reset">clear &amp; start over</a>
-  <a id="download" class="download">download</a>
- </h4>
+   <div id="actionButtons" class="btnContainer">
+     <h4>
+      <a id="reset" class="reset" title="Delete all headlines and begin again.">clear &amp; start over</a>
+      <a id="download" class="download" title="Download all headlines in a text file.">download as .txt</a>
+     </h4>
+   </div>
  </form>
 
  <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a> &middot; <a href="mailto:nealrs@gmail.com" title="I'd love to get your feedback!">feedback plz</a></p>
