--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
   <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required placeholder="Why SEO Gives marketers aneurysms" name="h17" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required placeholder="The Ultimate Twerking Compilation Video" name="h18" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required placeholder="The Brilliant, Super Fast Way to Shotgun a Beer" name="h19" spellcheck="true"/><span class="count">0</span></p>
-  <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required placeholder="Rage Spend like a Jilted Kardashian" name="h20" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required placeholder="Rage Spend Like a Jilted Kardashian" name="h20" spellcheck="true"/><span class="count">0</span></p>
 
-  <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required placeholder="The future of Sharks Is Here" name="h21" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required placeholder="The Future of Sharks Is Here" name="h21" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required placeholder="Nebraska Just Got Exciting" name="h22" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required placeholder="5 Lies Your Friends Tell You Everyday" name="h23" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required placeholder="The Programming Language That RMS Actually Likes" name="h24" spellcheck="true"/><span class="count">0</span></p>
