title/sentence casing on blur.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
  </div>
 
  <form id="form">
-  <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" required autofocus placeholder="Who Else Wants a Killer Robot?" name="h1" spellcheck="true"/><span class="count">0</span></p>
+  <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" required placeholder="Who Else Wants a Killer Robot?" name="h1" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">2.</span><input type="text" class="hl" id="h2" required placeholder="The Secret of Giant Pandas" name="h2" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" required placeholder="Here's the Miracle That's Helping Bros Live Longer" name="h3" spellcheck="true"/><span class="count">0</span></p>
   <div class="line"><span class="num">4.</span><input type="text" class="hl" id="h4"required placeholder="Little Known Ways to Nurse Your Cat" name="h4" spellcheck="true"/><span class="count">0</span></p>
