--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 </head>
 
 <body>
- <h2>Write 25 <span id="contentType">Headlines</span></h2>
- <h3 id="teaser"></h3>
-
+ <h1>25 <span id="contentType">Headlines</span></h1>
+ <h3>Write more headlines, get more clicks.<br><span id="teaser"></span>
+ </h3>
  <!--<p style="margin-top:0; margin-bottom:0;">
   <iframe src="http://ghbtns.com/github-btn.html?user=nealrs&repo=25Headlines&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
