add firebase data saving.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
      <h4>
       <a id="reset" class="reset" title="Delete all headlines and begin again.">clear &amp; start over</a>
       <a id="download" class="download" title="Download all headlines in a text file.">download as .txt</a>
-      <!--<a id="share" class="download" title="Download &amp; share headlines">share &amp; export</a>-->
+      <a id="share" class="download" title="Download &amp; share headlines">share &amp; export</a>
      </h4>
    </div>
  </form>
@@ -113,9 +113,10 @@
 
 
  <!-- JaVAVAVAVAVascript -->
- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
- <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
- <script src="js/mousetrap.min.js"></script>
+ <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+ <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script><script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
+ <!--<script src="js/mousetrap.min.js"></script>-->
  <script src="js/script.js"></script>
 </body>
 </html>
