redirect to viewer on share.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
    <div id="actionButtons" class="btnContainer">
      <h4>
       <a id="reset" class="reset" title="Delete all headlines and begin again.">clear &amp; start over</a>
-      <a id="download" class="download" title="Download all headlines in a text file.">download as .txt</a>
+      <!--<a id="download" class="download" title="Download all headlines in a text file.">download as .txt</a>-->
       <a id="share" class="download" title="Download &amp; share headlines">share &amp; export</a>
      </h4>
    </div>
