--- a/v/index.html
+++ b/v/index.html
@@ -42,7 +42,7 @@
 
  <div id="actionButtons" class="btnContainer">
    <h4>
-     <a href="../" class="download" title="Download all headlines in a text file.">write your own</a>
+     <a href="../" class="download" title="Try out 25Headlines for free.">write your own</a>
    </h4>
  </div>
 
