--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
  <!--<input type="submit" class="feedback" value="get feedback">-->
    <div id="actionButtons" class="btnContainer">
      <h4>
-      <a id="reset" class="reset" title="Delete all headlines and begin again.">clear &amp; start over</a>
+      <a id="reset" class="reset" title="Delete all headlines and begin again.">clear all</a>
       <!--<a id="download" class="download" title="Download all headlines in a text file.">download as .txt</a>-->
-      <a id="share" class="download" title="Download &amp; share headlines">share &amp; export</a>
+      <a id="share" class="download" title="Download &amp; share headlines">share</a>
      </h4>
    </div>
  </form>
