--- a/twitter.html
+++ b/twitter.html
@@ -4,8 +4,8 @@
 <head>
  <meta charset="utf-8">
 
- <title>Write 25 headlines &middot; If you want more clicks, you have to exercise your brain.</title>
- <meta name="description" content="Write better headlines &amp; get more clicks.">
+ <title>Write 25 tweets &middot; If you want more clicks, you have to exercise your brain.</title>
+ <meta name="description" content="Write better tweets &amp; get more clicks.">
  <meta name="author" content="Neal Shyam">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link href='http://fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
@@ -19,42 +19,42 @@
  <meta name="twitter:card" content="summary_large_image">
  <meta name="twitter:site" content="@nealrs">
  <meta name="twitter:creator" content="@nealrs">
- <meta name="twitter:title" content="25 Headlines">
- <meta name="twitter:description" content="Write better headlines &amp; get more clicks.">
+ <meta name="twitter:title" content="25 Tweets">
+ <meta name="twitter:description" content="Write better tweets &amp; get more clicks.">
 
  <meta name="twitter:image:src" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png">
 
  <!-- Open Graph data -->
- <meta property="og:title" content="25 Headlines" />
+ <meta property="og:title" content="25 Tweets" />
  <meta property="og:type" content="article" />
- <meta property="og:url" content="http://nealrs.github.io/25Headlines/" />
+ <meta property="og:url" content="http://nealrs.github.io/25Headlines/twitter.html" />
  <meta property="og:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png" />
  <meta property="og:description" content="If you want more clicks, you have to excercise your brain." />
- <meta property="og:site_name" content="25 Headlines" />
+ <meta property="og:site_name" content="25 Tweets" />
  <!--<meta property="fb:admins" content="Facebook numeric ID" />-->
 
 
 </head>
 
 <body>
- <h1>25 <span id="contentType">Headlines</span></h1>
- <h3 id="subHead">Copywriters aren't born, they practice.</h3>
+ <h1>25 <span id="contentType">Tweets</span></h1>
+ <h3 id="subHead">The secret to social media is practice.</h3>
 
  <p id="credit">Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
 
  <div id="selectors" class="btnContainer">
   <h4>
-   <a id="selh" class="sel sela" title="Write headlines">Headlines</a>
-   <a href="twitter.html" id="selt" class="sel" title="Write tweets">Tweets</a>
-   <a href="email.html" id="sele" class="sel" title="Write email subject lines">Emails</a>
+   <a href="index.html"id="selh" class="sel " title="Write headlines">Headlines</a>
+   <a id="selt" class="sel sela" title="Write tweets">Tweets</a>
+   <a href="email.html"id="sele" class="sel" title="Write email subject lines">Emails</a>
  </h4>
  </div>
 
  <div>
   <p>
-   <span class="length"><span id="len1" class="len leny" title="optimal length">50</span> Eh, ok</span> &nbsp;
-   <span class="length"><span id="len2" class="len leno" title="long, but still ok">62</span> Long</span> &nbsp;
-   <span class="length"><span id="len3" class="len lenr" title="max length allowed">100</span> No way</span>
+   <span class="length"><span id="len1" class="len leny" title="optimal length">100</span> Eh, ok</span> &nbsp;
+   <span class="length"><span id="len2" class="len leno" title="long, but still ok">120</span> Long</span> &nbsp;
+   <span class="length"><span id="len3" class="len lenr" title="max length allowed">140</span> No way</span>
   </p>
  </div>
 
