add spammy for subject lines
also sentence & title casing methods.

--- a/email.html
+++ b/email.html
@@ -40,7 +40,7 @@
  <h1>25 <span id="contentType">Subject lines</span></h1>
  <h3 id="subHead">Practice &#10140; Opens &#10140; Clicks.</h3>
 
- <p id="credit">Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
+ <p id="credit">Credits: <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &middot; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a> &middot; <a href="http://blog.hubspot.com/blog/tabid/6307/bid/30684/The-Ultimate-List-of-Email-SPAM-Trigger-Words.aspx" target="_blank" title="HubSpot's collection of common spam words">HubSpot</a></p>
 
  <div id="selectors" class="btnContainer">
   <h4>
@@ -52,9 +52,10 @@
 
  <div>
   <p>
-   <span class="length"><span id="len1" class="len leny" title="optimal length">35</span> Eh, ok</span> &nbsp;
-   <span class="length"><span id="len2" class="len leno" title="long, but still ok">40</span> Long</span> &nbsp;
-   <span class="length"><span id="len3" class="len lenr" title="max length allowed">50</span> No way</span>
+   <span class="length"><span id="len1" class="len leny" title="optimal length">35</span> Ok</span> &nbsp;
+   <span class="length"><span id="len2" class="len leno" title="long, but still ok">40</span> Eh</span> &nbsp;
+   <span class="length"><span id="len3" class="len lenr" title="max length allowed">50</span> Max</span>&nbsp;
+   <span class="length"><span id="len4" class="len lens" title="spam indicator">SPAM</span></span>
   </p>
  </div>
 
@@ -109,6 +110,7 @@
  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script><script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
+ <script src="js/spammy.js"></script>
  <script src="js/script.js"></script>
 </body>
 </html>
