--- a/twitter.html
+++ b/twitter.html
@@ -8,7 +8,7 @@
  <meta name="description" content="Write better tweets &amp; get more clicks.">
  <meta name="author" content="Neal Shyam">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link href='http://fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
+ <link href='//fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
  <link rel="stylesheet" href="css/styles.css">
 
  <!--[if lt IE 9]>
@@ -96,7 +96,7 @@
    <div id="actionButtons" class="btnContainer">
      <h4>
       <a id="reset" class="reset" title="Delete all headlines and begin again.">clear all</a>
-      <!--<a id="download" class="download" title="Download all headlines in a text file.">download as .txt</a>-->
+      <a id="download" class="download" title="Download all headlines in a text file.">download</a>
       <a id="share" class="download" title="Download &amp; share headlines">share</a>
      </h4>
    </div>
