--- a/v/index.html
+++ b/v/index.html
@@ -8,7 +8,7 @@
  <meta name="description" content="Write better headlines &amp; get more clicks.">
  <meta name="author" content="Neal Shyam">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link href='http://fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
+ <link href='//fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
  <link rel="stylesheet" href="../css/styles.css">
 
  <!--[if lt IE 9]>
@@ -88,6 +88,11 @@
 
  <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
  <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
+ <div id="actionButtons" class="btnContainer">
+  <h4>
+   <a id="download" class="download" title="Download all headlines in a text file.">download</a>
+  </h4>
+</div>
  </form>
 
  <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a> &middot; <a href="mailto:nealrs@gmail.com" title="I'd love to get your feedback!">feedback plz</a></p>
