--- a/twitter.html
+++ b/twitter.html
@@ -33,6 +33,17 @@
  <meta property="og:site_name" content="25 Tweets" />
  <!--<meta property="fb:admins" content="Facebook numeric ID" />-->
 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110784667-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110784667-1');
+</script>
+
+
 
 </head>
 
